# bubble-gum-pop

./: .env  .gitattributes  .gitignore  clustering_pipeline.py  conversaciones.ipynb  create_client_profiles.py  holi.txt  kmeans_model.pkl  main.py  manim_explanation.py  pyproject.toml  requirements.txt  server.py
app/: app.py
data/: df_profiles.csv  hey_clientes.csv  hey_productos.csv  hey_transacciones.csv  multi_mapper_profile_final.csv
frontend/: app.js  index.html  package-lock.json  package.json  styles.css  tailwind.config.ts
frontend/.next/: trace
frontend/.next/cache/: .tsbuildinfo
frontend/.next/cache/eslint/: .cache_j967he
frontend/.next/server/: server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/vendor-chunks/: @reduxjs.js  @swc.js  clsx.js  d3-array.js  d3-color.js  d3-format.js  d3-interpolate.js  d3-path.js  d3-scale.js  d3-shape.js  d3-time-format.js  d3-time.js  decimal.js-light.js  es-toolkit.js  eventemitter3.js  framer-motion.js  immer.js  internmap.js  lucide-react.js  motion-dom.js  motion-utils.js  (+10 more)
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ChatPanel.tsx  LeftPanel.tsx  LoginSimulator.tsx  RightPanel.tsx
frontend/src/store/: userStore.ts
media/Tex/: 7ea6ed36e0e54a6e.tex
preprocessing_TDA/: mapper_conversaciones.html  mapper_finanzas_financieras.html  tda_tools.py
src/: agents.py  crew.py  tasks.py
src/tools/: financial_tools.py  tda_tools.py
test/: tda_mapper_results.json  tda_tools_mock.py
(+13 files in other folders)
