[project]
name = "bubble-gum-pop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=1.14.3",
    "langchain>=1.2.15",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.4.1",
]
