[project]
name = "bubble-gum-pop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=1.14.3",
    "hdbscan>=0.8.42",
    "langchain>=1.2.15",
    "manim>=0.20.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "sentence-transformers>=5.4.1",
    "umap-learn>=0.5.12",
]
