[project]
name = "bubble-gum-pop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai[azure-ai-inference]>=1.14.3",
    "crewai-tools>=1.14.3",
    "langchain>=1.2.15",
    "pandas>=3.0.2",
    "python-dotenv>=1.2.2",
    "fastapi>=0.136.1",
    "uvicorn>=0.46.0",
]
